[project]
name = "sbdynt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astroquery>=0.4.10",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "rebound>=4.4.10",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sbdynt"]

[tool.uv]
dev-dependencies = ["pytest>=8.4.1", "python-call-graph>=2.1.4", "ruff>=0.12.9"]


[tool.ruff]
line-length = 80
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
